timeout modal z-index fix

--- a/src/sass/myservice-modal.scss
+++ b/src/sass/myservice-modal.scss
@@ -80,3 +80,9 @@
     margin: 2.4em 0 0 0;
     padding-top: 1em;
 }
+
+// styling for 'Timeout' modal
+
+.timeout-modal {
+	z-index: 9999;
+}
